--- a/style.css
+++ b/style.css
@@ -68,3 +68,38 @@ img {
     background-color: #1f2937;
     padding: 52px;
 }
+
+.pics {
+    max-width: 70vw;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+h2 {
+    text-align: center;
+}
+
+.img {
+    max-width: 200px;
+}
+
+.quote {
+    max-width: 50vw;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+
+.quote-author {
+    align-self: flex-end;
+}
+
+.quotebox {
+    background-color: #e5e7eb;
+}
