--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
+
+
 html, body {
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
+    font-family: 'Roboto', sans-serif;
 }
+
 
 .navbar {
     display: flex;
@@ -16,7 +20,8 @@ html, body {
 
 .logo {
     flex: 3 1 auto;
-    font-weight: bolder;
+    font-size: 24px;
+    color: #f9faf8;
 }
 
 ul {
@@ -76,6 +81,7 @@ img {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 100px;
 }
 
 h2 {
@@ -87,7 +93,7 @@ h2 {
 }
 
 .quote {
-    max-width: 50vw;
+    max-width: 60vw;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -102,4 +108,80 @@ h2 {
 
 .quotebox {
     background-color: #e5e7eb;
+}
+
+.register {
+    max-width: 60vw;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    background-color: #3882f6;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-radius: 10px;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1f2937;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #f9faf8;
+}
+
+.sign-two {
+    min-height: 35px;
+    min-width: 100px;
+    align-self: center;
+    background-color: #3882f6;
+    color: #f9faf8;
+    border-color: #f9faf8;
+    border-radius: 5px;
+}
+
+.sign-one {
+    min-height: 35px;
+    min-width: 100px;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    border-radius: 5px;
+    border: none;
+}
+
+.hero {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero-text {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.info-text {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    margin-top: 100px;
+}
+
+.para-quote {
+    font-size: 36px;
+    font-weight: 50;
+    font-style: italic;
+}
+
+.quote-author {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.text {
+    color: #e5e7eb;
+}
+
+.links {
+    font-size: 18px;
 }
